[package]
name = "cbx"
version = "0.0.0"
edition = "2021"
description = "Comic book archive tools"
keywords = ["comics"]
categories = ["multimedia::images"]
authors = ["Ebert Charles Matthee <dev@ecmatthee.com>"]
documentation = "https://docs.rs/cbx"
homepage = "https://github.com/ecmatthee/cbx"
readme = "readme.md"
repository = "https://github.com/ecmatthee/cbx"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
